--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
   <body>
     <h1>About Us</h1>
     <p>
+      <!-- Add something here to fix trademark -->
       This site is a sample project for the <strong>awesome</strong> Git
       tutorial <em>Learn Enough™ Git to Be Dangerous</em>.
     </p>
